# wechat-dump-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: wechat_3_9_analysis.md  wechat_4_0_0_26_table_struct.md  wechat_4_0_analysis.md
sample_scripts/: readme.md
sample_scripts/导出聊天记录到TXT/: chat_room_record_export_to_txt.py  readme.md  requirements.txt  📸•R62•摄影交流_msg_2024-12-18-2024-12-19.txt
src/: main.rs  process.rs
src/procmem/: mod.rs
src/test/data/: BizChatMsg.db  readme.md
