[package]
name = "wechat-dump-rs"
version = "1.0.27"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
cbc = "0.1.2"
clap = "4.4.3"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", features = ["sha1", "sha2"] }
sha1 = "0.10.5"
windows = { version = "0.58.0", features = [
    "implement", 
    "Win32_Security", 
    "Win32_System_WindowsProgramming", 
    "Win32_System_Com", 
    "Win32_System_Memory", 
    "Win32_System_Threading", 
    "Win32_Foundation", 
    "Win32_System_ProcessStatus", 
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
    "Win32_Storage_FileSystem"
] }
yara = { version = "0.29.0", features = ["yara-static", "vendored"] }
rayon = "1.10"
sha2 = "0.10.8"
regex = "1.11.1"
indicatif = { version = "0.17.9", features = ["rayon"] }
